# metamodel_version: 1.7.0
enum ExposureRegimenTypeEnum
  {
    continuous
    repeated
  }

enum SeverityEnum
  {
    mild
    moderate
    severe
  }

enum VehicleEnumeration
  {
    ethanol
    dmso
  }

type ChemicalEntity
  {
    uuid: String!
    chebiId: String
    casId: String
    chemicalName: String
    synonym: [String]
  }

type Control
  {
    uuid: String!
    controlType: String
    vehicleIfTreated: VehicleEnumeration
    comment: String
    controlImage: [ControlImage]
  }

type ControlImage
  {
    uuid: String!
    phenotypeId: String
    magnification: String
    resolution: String
    scaleBar: String
    phenotypeComments: String
  }

interface Entity
  {
    uuid: String!
  }

type Experiment
  {
    uuid: String!
    standardRearingCondition: Boolean
    rearingConditionComment: String
    fish: Fish
    control: [Control]
    exposureEvent: [ExposureEvent]
  }

type ExposureEvent
  {
    uuid: String!
    stressor: [StressorChemical]
    vehicle: [VehicleEnumeration]
    route: ExposureRouteEnum
    regimen: Regimen
    exposureStartStage: String
    exposureEndStage: String
    comment: String
    exposureType: ExposureTypeEnum
    additionalExposureCondition: String
    phenotypeObservation: [PhenotypeObservationSet]
  }

type Fish
  {
    uuid: String!
    id: String!
    name: String!
  }

type Image
  {
    uuid: String!
    magnification: String
    resolution: String
    scaleBar: String
  }

type Phenotype
  {
    uuid: String!
    stage: String
    prevalence: QuantityValue
    severity: SeverityEnum
    phenotypeTermId: String
  }

type PhenotypeObservationSet
  {
    uuid: String!
    image: [Image]
    phenotype: [Phenotype]
    controlImage: [ControlImage]
  }

type QuantityValue
  {
    unit: String
    numericValue: String
  }

type Regimen
  {
    uuid: String!
    exposureRegimenType: ExposureRegimenTypeEnum
    intervalBetweenIndividualExposures: QuantityValue
    totalExposureDuration: QuantityValue
    individualExposureDuration: QuantityValue
    numberOfIndividualExposure: Int
  }

type StressorChemical
  {
    uuid: String!
    chemicalId: ChemicalEntity!
    manufacturer: String
    concentration: QuantityValue!
    comment: String
  }

type Study
  {
    uuid: String!
    experiment: [Experiment]
    publication: String
    annotator: [String]
    lab: String
  }
