```mermaid
erDiagram
ChemicalEntity {
    uriorcurie chebi_id  
    string cas_id  
    string chemical_name  
    stringList synonym  
    string uuid  
}
Control {
    string control_type  
    VehicleEnumeration vehicle_if_treated  
    string comment  
    string uuid  
}
ControlImage {
    string phenotype_id  
    string magnification  
    string resolution  
    string scale_bar  
    string phenotype_comments  
    string uuid  
}
Entity {
    string uuid  
}
Experiment {
    boolean standard_rearing_condition  
    string rearing_condition_comment  
    string uuid  
}
ExposureEvent {
    VehicleEnumerationList vehicle  
    ExposureRouteEnum route  
    uriorcurie exposure_start_stage  
    uriorcurie exposure_end_stage  
    string comment  
    ExposureTypeEnum exposure_type  
    string additional_exposure_condition  
    string uuid  
}
Fish {
    uriorcurie id  
    string name  
    string uuid  
}
Image {
    string magnification  
    string resolution  
    string scale_bar  
    string uuid  
}
Phenotype {
    uriorcurie stage  
    SeverityEnum severity  
    uriorcurie phenotype_term_id  
    string uuid  
}
PhenotypeObservationSet {
    string uuid  
}
QuantityValue {
    string unit  
    string numeric_value  
}
Regimen {
    ExposureRegimenTypeEnum exposure_regimen_type  
    integer number_of_individual_exposure  
    string uuid  
}
StressorChemical {
    string manufacturer  
    string comment  
    string uuid  
}
Study {
    string publication  
    uriorcurieList annotator  
    uriorcurie lab  
    string uuid  
}

Control ||--}o ControlImage : "control_image"
Experiment ||--|o Fish : "fish"
Experiment ||--}o Control : "control"
Experiment ||--}o ExposureEvent : "exposure_event"
ExposureEvent ||--|o Regimen : "regimen"
ExposureEvent ||--}o PhenotypeObservationSet : "phenotype_observation"
ExposureEvent ||--}o StressorChemical : "stressor"
Phenotype ||--|o QuantityValue : "prevalence"
PhenotypeObservationSet ||--}o ControlImage : "control_image"
PhenotypeObservationSet ||--}o Image : "image"
PhenotypeObservationSet ||--}o Phenotype : "phenotype"
Regimen ||--|o QuantityValue : "individual_exposure_duration"
Regimen ||--|o QuantityValue : "interval_between_individual_exposures"
Regimen ||--|o QuantityValue : "total_exposure_duration"
StressorChemical ||--|| ChemicalEntity : "chemical_id"
StressorChemical ||--|| QuantityValue : "concentration"
Study ||--}o Experiment : "experiment"

```

